@@ -56,17 +56,58 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.11.0</version>
+        <version>3.12.1</version>
         <configuration>
-          <release>17</release>
+          <source>21</source> <!-- TODO release causes compilation failure why? -->
+          <target>21</target>
+          <compilerArgs>
+            <arg>--add-exports</arg>
+            <arg>java.desktop/com.sun.media.sound=ALL-UNNAMED</arg>
+            <arg>--add-exports</arg>
+            <arg>java.base/sun.nio.ch=ALL-UNNAMED</arg>
+          </compilerArgs>
+          <!-- https://stackoverflow.com/a/30472473 -->
+          <fork>true</fork>
+          <showWarnings>true</showWarnings>
         </configuration>
       </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <version>3.6.1</version>
+        <executions>
+          <execution>
+            <id>copy</id>
+            <phase>generate-test-resources</phase>
+            <goals>
+              <goal>copy</goal>
+            </goals>
+            <configuration>
+              <artifactItems>
+                <artifactItem>
+                  <groupId>com.github.umjammer.vavi-commons</groupId>
+                  <artifactId>vavi-instrumentation</artifactId>
+                  <type>jar</type>
+                  <overWrite>false</overWrite>
+                  <outputDirectory>${project.build.directory}</outputDirectory>
+                  <destFileName>vavi-instrumentation.jar</destFileName>
+                </artifactItem>
+              </artifactItems>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.2.2</version>
+        <version>3.2.5</version>
         <configuration>
           <argLine>
+            --add-exports java.desktop/com.sun.media.sound=ALL-UNNAMED
+            --add-opens java.base/java.io=ALL-UNNAMED
+            --add-opens java.base/sun.nio.ch=ALL-UNNAMED
             -Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties
           </argLine>
           <trimStackTrace>false</trimStackTrace>
@@ -87,7 +128,7 @@
       <dependency>
         <groupId>org.junit</groupId>
         <artifactId>junit-bom</artifactId>
-        <version>5.10.2</version>
+        <version>5.11.4</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -98,23 +139,56 @@
     <dependency>
       <groupId>com.github.umjammer</groupId>
       <artifactId>vavi-commons</artifactId>
-      <version>1.1.13</version>
+      <version>1.1.14</version>
     </dependency>
     <dependency>
-      <groupId>com.github.umjammer</groupId> <!-- vavi / com.github.umjammer -->
-      <artifactId>vavi-sound</artifactId>
-      <version>1.0.18</version>
+      <groupId>com.github.umjammer.vavi-commons</groupId>
+      <artifactId>vavi-instrumentation</artifactId>
+      <version>1.1.14</version>
     </dependency>
     <dependency>
-      <groupId>com.github.umjammer</groupId>
+      <groupId>vavi</groupId> <!-- vavi / com.github.umjammer -->
+      <artifactId>vavi-util-serdes</artifactId>
+      <version>1.0.8-SNAPSHOT</version>
+      <exclusions>
+        <exclusion>
+          <groupId>net.minidev</groupId>
+          <artifactId>json-smart</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+<dependency>
+      <groupId>net.minidev</groupId>
+      <artifactId>json-smart</artifactId>
+      <version>2.5.2</version>
+    </dependency>
+    <dependency>
+      <groupId>vavi</groupId> <!-- vavi / com.github.umjammer -->
+      <artifactId>vavi-sound-sandbox</artifactId>
+      <version>1.0.11-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>vavi</groupId> <!-- com.github.umjammer / vavi -->
       <artifactId>vavi-awt</artifactId>
-      <version>1.0.7</version>
+      <version>1.0.9-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
+      <groupId>vavi</groupId>
+      <artifactId>vavi-sound-mdsound</artifactId>
+      <version>0.0.9-SNAPSHOT</version>
+<exclusions>
+  <exclusion>
+    <groupId>com.github.umjammer</groupId>
+    <artifactId>vavi-sound</artifactId>
+  </exclusion>
+</exclusions>
     </dependency>
 
     <dependency>
       <groupId>com.formdev</groupId>
       <artifactId>flatlaf</artifactId>
-      <version>3.4.1</version>
+      <version>3.5</version>
       <scope>runtime</scope>
     </dependency>
 
